--- a/src/posts/2024-02-03_january-2024.md
+++ b/src/posts/2024-02-03_january-2024.md
@@ -1,15 +1,7 @@
 ---
 title: January 2024
-image:
-  src: unsplash/january
-  alt: January scrabble words
-  caption: January scrabble words
-  attribution: Unsplash user Glen Carrie
-archiveYear: 2024
 tags: 
   - Personal
-metas:
-  image: /img/unsplash/january-large.webp
 ---
 
 **Hello World!** Welcome to my new place on the internet. It's early Feb '24 and after months of procrastinating, today I bought the domain *nordling.xyz* and this is the address I'll use when sharing what's on my mind.
@@ -128,7 +120,7 @@ My Spotify playlist for [January 2024](https://open.spotify.com/playlist/2uXzMCR
 - Went to the motorcycle fair with dad[^6].
 - Met some new friends at the Gamestart Connect: Meetup#1.
 
-[^6]: We saw some cool bikes and here are my favourites from Kawasaki: [Z900 RS SE](https://www.kawasaki.com/en-us/motorcycle/z/retro-sport/z900rs/2024-z900rs-se-abs), [KX 450 50th Anniversary](https://www.kawasaki.com/en-us/motorcycle/kx/full-size-mx/kx-450/2024-kx450-50th-anniversary-edition), and [BMW M 1000 R Competition](https://www.bmwmotorcycles.com/en/models/m/m1000r.html).
+[^6]: We saw some cool bikes and here are my favourites from Kawasaki: [Z900 RS SE](https://www.kawasaki.com/en-us/motorcycle/z/retro-sport/z900rs/2024-z900rs-se-abs), [KX 450 50th Anniversary](https://www.kawasaki.com/en-us/motorcycle/kx/full-size-mx/kx-450/2024-kx450-50th-anniversary-edition), and BMW [M 1000 R Competition](https://www.bmwmotorcycles.com/en/models/m/m1000r.html).
 
 <div id="instapost">
   <iframe src="https://www.instagram.com/reel/C2kBvwtiQmk/embed/" width="80%" frameborder="0" scrolling="no"></iframe>
