--- a/posts/2017-01-24-30-day-challenge-2017.md
+++ b/posts/2017-01-24-30-day-challenge-2017.md
@@ -1,5 +1,5 @@
 ---
-title: 2017 First 30 Day Challenge
+title: 30 Day Challenge
 tags:
   - Challenge
 ---
@@ -20,18 +20,17 @@ How will I do it?
 - I have you guys to keep me accountable for following through on my promise and I want to be a man with high integrity 🙂
 - Runner gloves to wear at all times when the urge gets to tough (is this cheating?) 😀
 
-Hal Elrod is talking about [The Miracle Morning Facebook Community](https://www.facebook.com/groups/MyTMMCommunity/) (which as of this writing has 79 085 members) in his podcast [Achieve Your Goals](https://halelrod.com/podcast/).
-That seems like a good group to join in order to get and give support. The more people I tell the better, that means I'm more likely to perform (that's how psychology works).
+Hal Elrod is talking about [The Miracle Morning Facebook Community](https://www.facebook.com/groups/MyTMMCommunity/)[^1] in his [podcast](https://halelrod.com/podcast/)[^2]. That seems like a good group to join in order to get and give support. The more people I tell the better, that means I'm more likely to perform (that's how psychology works).
+
+[^1]: Had 79 085 members in 2017.
+[^2]: The podcast was called *Achieve Your Goals* in 2017.
+[^3]: Here's the long awaited update. This is still a personal battle in 2024 but it has been getting better.
 
 The episode on accountability and 30 day challenges got me even more motivated to continue changing my life for the better.
 
-Oh and btw there will be a follow up post next month where you can see my progress. The current state is horrible and I thought this to myself last night:
+Oh and btw there will be a follow up post next month where you can see my progress[^3]. The current state is horrible and I thought this to myself last night:
 > Grow your fingernails like a normal person and Don't chew them off like a psycho!
 
-That was all for now.
-
-Leave a comment below and continue to stay awesome. I am always up for criticism or talking about life in general (because there's a lot to talk about these days).
-
-Take Care,
+That was all for now. Take Care!
 
 / Rasmus
