--- a/posts/2017-02-19-arena-run-2017.md
+++ b/posts/2017-02-19-arena-run-2017.md
@@ -6,7 +6,7 @@ tags:
 
 Hi everybody,
 
-Yesterday I ran the obstacle course [Arena Run](https://arenarun.se).
+Yesterday I ran the obstacle course [Arena Run](https://runnersworld.se/arenarun/).
 
 What is Arena Run?
 
@@ -18,7 +18,9 @@ I've been off my running practice for a few weeks because of a stubborn cold but
 
 With [the Foo Fighters album](https://en.wikipedia.org/wiki/Foo_Fighters_(album)) in my ears, I traveled to Friends Arena. Upon arrival I saw the finishing ramp which looked steep and some doubt appeared. I wasn't sure if I could run the whole way up. After watching the first runners complete the course I reassured myself that I could do it without any problem as well.
 
-Part from all the other participants I saw a lot of trainers from [TSM](https://tsmrunning.se) (not so strange really since the Marathon group was one of the arrangers).
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4EnNuo8fG7dMoxMefbApRY?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+Part from all the other participants I saw a lot of trainers from [TSM Running](https://www.stockholmmarathon.se/tsm-running/) (not so strange really since the Marathon group was one of the arrangers).
 Later my family arrived to spectate and I went with my sister to the participants area.
 While waiting for our start, we saw a runner dressed like [Jason Voorhees](http://fridaythe13th.wikia.com/wiki/Jason_Voorhees) with the white hockey mask and an apron. He didn't run with a machete though.
 
@@ -50,7 +52,7 @@ Oh and BTW I didn't got picked for the ASICS FrontRunner team but at the same ti
 
 <figure>
 
-  ![Gift from TSM](/img/personal/gift-from-tsm-regular.webp)
+  ![Gift from TSM](/img/personal/gift-from-tsm-small.webp)
   <figcaption>Gift from TSM 👌</figcaption>
 </figure>
 
