--- a/posts/2017-05-19-week-20-2017.md
+++ b/posts/2017-05-19-week-20-2017.md
@@ -1,5 +1,5 @@
 ---
-title: Weekly News 2017-05-19
+title: Week 20, 2017
 tags:
   - Travel
 ---
@@ -8,9 +8,9 @@ Hi,
 
 I know it's been a long time. I haven't been at my best these last couple of months and had to prioritize the things that's more important.
 
-Anyway the aim with this blog is to challenge the world and myself, go outside of my comfort zone and achieve those big life goals that I have (and you hopefully have yours).<!--more-->
+Anyway the aim with this blog is to challenge the world and myself, go outside of my comfort zone and achieve those big life goals that I have (and you hopefully have yours).
 
-# Week 20 May 15 - 18
+<!--more-->
 
 ## Travel
 
@@ -27,8 +27,8 @@ I spent the weekend in Berlin on my very first Knowabunga with [tretton37](https
 Attended two seminars about tobacco and alcohol and got further knowledge in how it prevents sustainable development, globally.
 The world would be better of without these industries and their "products".
 I later pitched my idea to a few people about a podcast discussing tobacco politics and I got good response.
-After more investigation at [The Audacity to Podcast](https://theaudacitytopodcast.com/getting-started/) I realized there's more work before the launch (it will hopefully be before the _[World No Tobacco Day, 31 May](https://www.who.int/tobacco/wntd/en/)).
-For news and articles about tobacco restriction I would point you in the direction of [Tobaksfakta](http://www.tobaksfakta.se/about-us/).
+After more investigation at [The Audacity to Podcast](https://theaudacitytopodcast.com/getting-started/) I realized there's more work before the launch (it will hopefully be before the [World No Tobacco Day, 31 May](https://www.who.int/tobacco/wntd/en/)).
+For news and articles about tobacco restriction I would point you in the direction of [Tobaksfakta](https://tobaksfakta.se/kategori/english/).
 
 Approached a few smokers at the subway station and on the street. We briefly discussed their habit. One guy was from Syria and he thought I asked for a smoke.
 It was difficult sitting next to him and inhale the poisonous smoke but he turned out to be nice. Even if they chose to continue smoking I got a confidence boost and will continue to hand out information to those who want help saying NO to Tobacco!
@@ -39,22 +39,22 @@ I spent some time on Facebook actively promoting the *World No Tobacco Day, 31 
 
 Yesterday evening was MilSpåret at Djurgården and this time I really pushed for a personal best (and got it).
 Distance 10K and final time was 50:34 minutes, giving a pace of 5:03 min/km. That's an improvement by 1 minute and 38 seconds. I still chase sub 50 though.
-It was really hot running in the sun and I had my new clothes that shows I support Swedish running.
-I ordered it from [Intersport](https://www.intersport.se/supporterklubbar/svenska-friidrottsforbundet).
-Next up, ASICS Stockholm Marathon which is happening on June 3!
+It was really hot running in the sun and I had my new clothes that shows I support Swedish Running.
+
+Next up, ASICS Stockholm Marathon which is happening June 3!
 
 <figure>
 
   ![Milspåret](/img/rasmus/milsparet2017-regular.webp)
-  <figcaption>Milspåret</figcaption>
+  <figcaption>MilSpåret</figcaption>
 </figure>
 
 ## Other News
 
 I watched the Russian Formula 1 Grand Prix and discovered the singer *Hannah Grace*.
-I have been listening on repeat all week and my favorite song is still the cover *[Praise You](https://open.spotify.com/embed/track/5IxxjcxrdI0FfiwQlDiOdz)*.
+I have been listening on repeat all week and my favorite song is still the cover *Praise You*.
 
-<iframe src='https://open.spotify.com/embed/track/5IxxjcxrdI0FfiwQlDiOdz' width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/2RT7XJYngmx9fK4YS4Gt0b?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ## The Bad News
 
