add posts from happy kodar

--- a/posts/2017-01-24-30-day-challenge-2017.md
+++ b/posts/2017-01-24-30-day-challenge-2017.md
@@ -14,6 +14,8 @@ This time it's *different*.
 
 <!--more-->
 
+*This post was originally posted on [Dream BIG](https://rasmus-nordling.netlify.app/personal-development/2017/01/24/challenge1/)*.
+
 How will I do it?
 
 - With more knowledge, experience and a HUGE drive to go from Unbearable to Unstoppable!
