--- a/posts/2017-02-19-arena-run-2017.md
+++ b/posts/2017-02-19-arena-run-2017.md
@@ -12,7 +12,9 @@ What is Arena Run?
 
 > "Arena Run is an obstacle run where you run, crawl, jump in, under, over and through obstacles in a unique arena environment. It gives you the opportunity to challenge yourself as an individual or as part of a team. The race has a total distance of 5K within the arena premises and you run up and down stairs, in-between bars, through tunnels, stands and corridors, and out on the pitch." - arenarun.se
 
-> <!--more-->
+<!--more-->
+
+*This post was originally posted on [Dream BIG](https://rasmus-nordling.netlify.app/health-fitness/2017/02/19/arena-run-2017/)*.
 
 I've been off my running practice for a few weeks because of a stubborn cold but I didn't wanna miss this event that I've been so excited for.
 
