--- a/posts/2017-05-19-week-20-2017.md
+++ b/posts/2017-05-19-week-20-2017.md
@@ -12,6 +12,8 @@ Anyway the aim with this blog is to challenge the world and myself, go outside o
 
 <!--more-->
 
+*This post was originally posted on [Dream BIG](https://rasmus-nordling.netlify.app/2017/05/19/weekly-news/)*.
+
 ## Travel
 
 I spent the weekend in Berlin on my very first Knowabunga with [tretton37](https://tretton37.com/). It was nice to get together and meet colleges from the other offices. Before we flew back to Sweden I took the U-Bahn to Alexanderplatz and went up the [_Fernsehturm_](https://en.wikipedia.org/wiki/Fernsehturm_Berlin) to get a 360 view of the city. 🙂
