update block quote formatting

--- a/posts/2017-02-19-arena-run-2017.md
+++ b/posts/2017-02-19-arena-run-2017.md
@@ -10,7 +10,7 @@ Yesterday I ran the obstacle course [Arena Run](https://runnersworld.se/arenarun
 
 What is Arena Run?
 
-> "Arena Run is an obstacle run where you run, crawl, jump in, under, over and through obstacles in a unique arena environment. It gives you the opportunity to challenge yourself as an individual or as part of a team. The race has a total distance of 5K within the arena premises and you run up and down stairs, in-between bars, through tunnels, stands and corridors, and out on the pitch." - arenarun.se
+> Arena Run is an obstacle run where you run, crawl, jump in, under, over and through obstacles in a unique arena environment. It gives you the opportunity to challenge yourself as an individual or as part of a team. The race has a total distance of 5K within the arena premises and you run up and down stairs, in-between bars, through tunnels, stands and corridors, and out on the pitch.
 
 <!--more-->
 
