--- a/posts/2024-02-03-january-2024.md
+++ b/posts/2024-02-03-january-2024.md
@@ -177,3 +177,5 @@ My Spotify playlist for [January 2024](https://open.spotify.com/playlist/2uXzMCR
 - That I have a hard time asking for help. Stuck at work and wasting time trying to solve it myself.
 
 Until you hear from me again.
+
+/ Rasmus
