fix all internal urls

--- a/posts/2024-02-03-january-2024.md
+++ b/posts/2024-02-03-january-2024.md
@@ -1,6 +1,8 @@
 ---
 title: January 2024
-tags: 
+tags:
+  - Motorcycle
+  - Music
   - Personal
 ---
 
@@ -99,7 +101,7 @@ Listened to:
 - [Happier with Gretchen Rubin](https://gretchenrubin.com/podcasts/). Got me inspired to try the *Happiness Trifecta*.
 - [Sticky Notes](https://stickynotespodcast.libsyn.com/). The episodes on Brahm’s Violin Concerto, and Bela Bartok’s Concerto for Orchestra.
 
-My Spotify playlist for [January 2024](https://open.spotify.com/playlist/2uXzMCReRrcEJAWiQ5v4LD?si=b7860cb14f6f47c4).
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2uXzMCReRrcEJAWiQ5v4LD?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 ## What Did I Learn?
 
